[package]
name = "rust_reptile"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
log = "0.4.27"
tracing = { version = "0.1.41", features = [] }
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.15", features = [] }
tokio = { version = "1", features = ["full"] }
scraper = { version = "0.23.1", features = ["default"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlx-mysql", "mysql", "macros"] }